--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "react-icons": "^5.1.0",
     "react-router-dom": "^6.23.0",
     "react-toastify": "^10.0.5",
+    "styled": "^1.0.0",
+    "styled-components": "^6.1.8",
     "swiper": "^9.4.1"
   },
   "devDependencies": {
